# An-lisis-Apuestas-Basketball

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: data_cleaning.ipynb
src/: config.py
src/ingestion/: backfill.py  historical_odds.py  nba_stats.py  odds_api.py
src/modeling/: optimize.py  test_model.py  train.py
src/processing/: defense.py  features.py  market_features.py  odds_processor.py  position_defense.py  team_stats.py
src/strategy/: ev_calculator.py
